css/app.css
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
 }

 body {
   background: #333;
   font-size: 1.6em;
   margin-bottom: 30px;
   color: #eee;
   font-weight: 600;
 }

   ul {
  list-style-type: disc;
  margin-left: 2em;
  padding-left: 1em;
 }

 header {
   width: 150%;
   height: 700px;
   background: url('../assets/images/site_bkg_new_large.jpeg');
   padding: 0px
 }

 #logo {
   width: 200px;
 }

 nav {
   width: 100%;
   height: 80px;
   background: #eee;
   text-align: center;
   padding-top: 20px;
   border-top: 1px solid #222;
   border-bottom: 1px solid #222;
 }

 a {
   text-decoration: none;
   font-size: 1.5em;
   font-weight: 700;
   color: #333;
   margin: 0 21px;
 }

 a:hover {
   color: #a47764;
   text-decoration: underline;
 }

 main {
   width: 100%;
   background: #fff;
 }

 #about {
   width: 100%;
   min-height: 700px;
   background: linear-gradient(to left, #0a2a88, #fff);
   border-bottom: 1px solid #333;
   padding: 50px 50px;
 }

 #bioPic {
   float: left;
   max-width: 420px;
   border-radius: 16px;
   border: 4px solid #fff;
   margin: 150px 50px;
 }

 #skills {
   width: 100%;
   background: #fff;
   color: #0a2a88;
   border-bottom: 1px solid #0a2a88;
   padding: 100px 100px;
   text-align: center;
 }

 .skill {
   width: 300px;
   height: 300px;
   background: #ccc;
   color: #0a2a88;
   border: 1px solid #fff;
   border-radius: 8px;
   display: inline-block;
   margin: 25px;
   text-align: center;
 }

 .topSkill {
   background: #ccc;
   padding: 25px 0;
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
 }

 .bottomSkill {
   padding: 50px 25px;
 }

 .bottomSkill>i {
   font-size: 4em;
 }

 #contact {
   width: 100%;
   height: 700px;
   background: linear-gradient(to right, #0a2a88, #59cde9);
   border-bottom: 1px solid #333;
   padding: 100px 100px;
   text-align: center;
 }

 #contactForm {
   padding: 20px;
   max-width: 60%;
   margin: 50px auto;
   border-radius: 8px;
   background: linear-gradient #939aba;
 }

 input,
 textarea {
   width: 100%;
   padding: 10px;
   margin-top: 10px;
   margin-bottom: 15px;
   border: 1px solid #ccc;
   border-radius: 4px;
 }

 button {
   background: #0a2a88 #fff;
   padding: 10px;
   border: none;
   width: 100%;
   border-radius: 4px;
   cursor: pointer;
 }

 footer {
   width: 100%;
   height: 200px;
   background: #fff;
   margin-bottom: 100px;
   color: #0a2a88;
   text-align: center;
   padding-top: 20px;
   font-size: .9em;
   font-style: italic;
 }

